# android-touch-record-replay

./: .gitignore  README.md  pyproject.toml  requirements.txt
cli/: main.py  record.py  replay.py  replay_test.py
config/: config.schema.yaml  default.yaml
docs/: usage.md
scripts/: .gitkeep
tests/: test_event_parser.py  test_generator.py  test_gesture_recognizer.py
touch_record/: __init__.py
touch_record/core/: __init__.py  constants.py  device_info.py  event_listener.py  event_parser.py  event_types.py  gesture_recognizer.py  gesture_types.py
touch_record/generator/: __init__.py  adb_generator.py  base_generator.py  hybrid_generator.py  u2_generator.py
touch_record/recorder/: __init__.py  base_recorder.py  batch_recorder.py  realtime_recorder.py
touch_record/replayer/: __init__.py  adb_replayer.py  base_replayer.py  u2_replayer.py
touch_record/utils/: __init__.py
