[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "touch-record-replay"
version = "0.1.0"
description = "Android 触摸操作录制和回放框架"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["android", "touch", "record", "replay", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "uiautomator2>=2.16.0",
    "PyYAML>=6.0",
    "click>=8.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
]

[project.scripts]
touch-record = "cli.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/touch-record-replay"
Repository = "https://github.com/yourusername/touch-record-replay"
Issues = "https://github.com/yourusername/touch-record-replay/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["touch_record*", "cli*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=touch_record --cov-report=term-missing"
